# F401_Black_Pill_Template

./: Cargo.toml  Embed.toml  rust-toolchain.toml
.cargo/: config.toml
src/: template.rs
src/answers/: blinky.rs  debounce.rs
